working quiz app. needs cleanup
